tests/NormalTests/paczka1/fuzzy1/83604221.err
Error in line 4: QuJlQN1FA S962 1,2
Error in line 12: qJg A904 92,4
Error in line 20: QuJlQN1FA A904 76,2
Error in line 23: QuJlQN1FA S962 63,4
Error in line 22: A904 S588 56,9
Error in line 24: QuJlQN1FA A449 95,5
Error in line 27: QuJlQN1FA S588 56,6
